Fix Action names and Page Spacing

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -54,10 +54,14 @@ p .zooja_elements {
   margin-right: 20px;
 }
 
+.blank_space {
+  height: 10vh;
+}
+
 .page {
   position: relative;
   background-color: #f7f2ee;
-  padding-top: 16vh;
+  padding-top: 6vh;
   color: #00171f;
   min-height: 100vh;
   overflow: auto;
